resolveoverflowhiddendeletehtml

--- a/dep/styles/pages/_home.scss
+++ b/dep/styles/pages/_home.scss
@@ -9,16 +9,9 @@
 
 html {
   font-size: 62.5%;
-  overflow: hidden;
+  // overflow: hidden;
   scroll-padding-top: 6rem;
   scroll-behavior: smooth;
-}
-
-body {
-  //スクロールバーを表示させる
-  overflow-y: scroll;
-
-  height: 300rem;
 }
 
 header {
@@ -217,36 +210,42 @@ header {
     #menu-bar {
       display: initial;
     }
-  
 
-   header .navbar {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    left: 0;
-    background-color: $cGrey;
-    border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
-    padding: 1.5rem 2rem;
-    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    header .navbar {
+      position: absolute;
+      top: 100%;
+      right: 0;
+      left: 0;
+      background-color: $cGrey;
+      border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
+      padding: 1.5rem 2rem;
+      clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
 
-    & a {
-      display: block;
-      border-radius: 0.5rem;
-      padding: 1rem;
-      margin: 1rem 0;
-      background-color: $cDGray;
-    }
+      & a {
+        display: block;
+        border-radius: 0.5rem;
+        padding: 1rem;
+        margin: 1rem 0;
+        background-color: $cDGray;
+      }
 
-    &.active {
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+      &.active {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+      }
     }
   }
-}}
+}
 
 @media (max-width: 450px) {
   html {
     font-size: 50%;
   }
+}
+
+body {
+  //スクロールバーを表示させる
+  overflow-y: scroll;
+  height: 400rem;
 }
 
 
